<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TPActivity">

    <DatePicker
        android:id="@+id/T_StartDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:scaleX=".8"
        android:scaleY=".8"
        android:theme="@style/NumberPickerStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/T_SchStartW" />

    <DatePicker
        android:id="@+id/T_StopDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:scaleX=".8"
        android:scaleY=".8"
        android:theme="@style/NumberPickerStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/T_SchFinishW" />

    <TimePicker
        android:id="@+id/T_StartTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="200dp"
        android:headerBackground="#0f0f0f00"
        android:scaleX=".8"
        android:scaleY=".8"
        android:theme="@style/NumberPickerStyle"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/T_StartDatePicker" />

    <TimePicker
        android:id="@+id/T_StopTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="200dp"
        android:headerBackground="#0f0f0f00"
        android:scaleX=".8"
        android:scaleY=".8"
        android:theme="@style/NumberPickerStyle"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/T_StopDatePicker" />

    <TextView
        android:id="@+id/T_DevNameW"
        android:layout_width="110pt"
        android:layout_height="20pt"
        android:background="@null"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/DevName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time_DevConW" />

    <TextView
        android:id="@+id/T_DataCSW"
        android:layout_width="90pt"
        android:layout_height="10pt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/text_DCS"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_DevB" />

    <TextView
        android:id="@+id/T_SchStartW"
        android:layout_width="90pt"
        android:layout_height="20pt"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/text_start"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_DataCSW" />

    <TextView
        android:id="@+id/T_SchFinishW"
        android:layout_width="90pt"
        android:layout_height="20pt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/text_finish"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_DataCSW" />

    <TextView
        android:id="@+id/T_SchIntW"
        android:layout_width="wrap_content"
        android:layout_height="20pt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="230dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/text_interval"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_DataCSW" />

    <Button
        android:id="@+id/T_DevB"
        android:layout_width="40pt"
        android:layout_height="20pt"
        android:layout_marginStart="15dp"
        android:hint="@string/dev_B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_DevNameW" />

    <Button
        android:id="@+id/T_TimeB"
        android:layout_width="40pt"
        android:layout_height="20pt"
        android:layout_marginStart="10dp"
        android:hint="@string/time_B"
        app:layout_constraintStart_toEndOf="@+id/T_DevB"
        app:layout_constraintTop_toTopOf="@+id/T_DevB" />

    <TextView
        android:id="@+id/test1"
        android:layout_width="353dp"
        android:layout_height="129dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="244dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_StartDatePicker" />

    <TextView
        android:id="@+id/Time_DevConW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/dc"
        app:layout_constraintStart_toStartOf="@+id/T_DevNameW"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/T_SetScheduleB"
        android:layout_width="60pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:hint="@string/setScheduleB"
        android:onClick="setSchedule"
        app:layout_constraintStart_toStartOf="@+id/T_DevB"
        app:layout_constraintTop_toBottomOf="@+id/T_SchFinishW" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51pt"
        android:layout_height="48pt"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/erg_large" />

    <EditText
        android:id="@+id/T_DataIntValue"
        android:layout_width="30pt"
        android:layout_height="25pt"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/T_SchIntW"
        app:layout_constraintStart_toEndOf="@+id/T_SchIntW" />

</androidx.constraintlayout.widget.ConstraintLayout>