<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/T_DevConW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/dc"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/T_DevNameW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/T_DevConW"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:hint="@string/DevName"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColorHint="@android:color/black" />

        <ImageView
            android:id="@+id/T_LogoP"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/T_DevNameW"
            android:adjustViewBounds="true"
            android:contentDescription="ERG Research Rgoup logo"
            app:srcCompat="@drawable/ic_charrlogo" />

        <Button
            android:id="@+id/T_DevB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/T_DevNameW"
            android:layout_alignStart="@+id/T_SetScheduleB"
            android:layout_alignEnd="@+id/T_SetScheduleB"
            android:hint="@string/dev_B"
            android:onClick="onDeviceClick"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/black" />

        <Button
            android:id="@+id/T_TimeB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/T_DevNameW"
            android:layout_alignStart="@+id/T_SaveScheduleB"
            android:layout_alignEnd="@+id/T_SaveScheduleB"
            android:hint="@string/time_B"
            android:onClick="onTimeClick"
            android:textColorHint="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/T_DevB"
            app:layout_constraintTop_toTopOf="@+id/T_DevB" />

        <TextView
            android:id="@+id/T_DataCSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_DevB"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/text_DCS"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@android:color/black" />

        <TextView
            android:id="@+id/T_SchStartW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_DataCSW"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/text_start"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColorHint="@android:color/black" />

        <DatePicker
            android:id="@+id/T_StartDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_below="@+id/T_SchStartW"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="-20dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX=".8"
            android:scaleY=".8"
            android:theme="@style/NumberPickerStyle" />

        <TimePicker
            android:id="@+id/T_StartTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_below="@+id/T_SchStartW"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="-20dp"
            android:layout_toEndOf="@id/T_StartDatePicker"
            android:headerBackground="#0f0f0f00"
            android:scaleX=".8"
            android:scaleY=".8"
            android:theme="@style/NumberPickerStyle"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/T_SchFinishW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_StartDatePicker"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:hint="@string/text_finish"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColorHint="@android:color/black" />

        <DatePicker
            android:id="@+id/T_StopDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_below="@+id/T_SchFinishW"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="-20dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX=".8"
            android:scaleY=".8"
            android:theme="@style/NumberPickerStyle" />

        <TimePicker
            android:id="@+id/T_StopTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_below="@+id/T_SchFinishW"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="-20dp"
            android:layout_toEndOf="@id/T_StopDatePicker"
            android:headerBackground="#0f0f0f00"
            android:scaleX=".8"
            android:scaleY=".8"
            android:theme="@style/NumberPickerStyle"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/T_SchIntW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_StopDatePicker"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:hint="@string/text_interval"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/T_DataIntValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_StopDatePicker"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-12dp"
            android:layout_toEndOf="@id/T_SchIntW"
            android:inputType="number"
            android:maxLength="9"
            android:text="0"
            android:textAlignment="center" />

        <Button
            android:id="@+id/T_SetScheduleB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_SchIntW"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:hint="@string/setScheduleB"
            android:onClick="setSchedule"
            android:textColorHint="@android:color/background_dark"
            android:textSize="12sp" />

        <Button
            android:id="@+id/T_SaveScheduleB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_SchIntW"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/T_SetScheduleB"
            android:hint="@string/save_sch"
            android:onClick="onScheduleClick"
            android:textColorHint="@android:color/background_dark"
            android:textSize="12sp" />

        <Button
            android:id="@+id/T_LoadScheduleB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_SchIntW"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/T_SaveScheduleB"
            android:hint="@string/load_sch"
            android:onClick="onScheduleClick"
            android:textColorHint="@android:color/background_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/T_DataCollectedW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_SetScheduleB"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/dd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@android:color/black" />

        <Button
            android:id="@+id/T_DataBDownlodB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_DataCollectedW"
            android:layout_alignStart="@+id/T_SetScheduleB"
            android:layout_alignEnd="@+id/T_SetScheduleB"
            android:layout_marginTop="12dp"
            android:hint="@string/download"
            android:onClick="onDownloadClick"
            android:textColorHint="@android:color/background_dark" />

        <Button
            android:id="@+id/T_DataADownlodB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_DataCollectedW"
            android:layout_alignStart="@+id/T_SaveScheduleB"
            android:layout_alignEnd="@+id/T_SaveScheduleB"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/T_DataBDownlodB"
            android:hint="@string/advanced"
            android:onClick="onDownloadClick"
            android:textColorHint="@android:color/background_dark" />

        <Button
            android:id="@+id/T_CancelB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/T_DataCollectedW"
            android:layout_alignStart="@+id/T_LoadScheduleB"
            android:layout_alignEnd="@+id/T_LoadScheduleB"
            android:layout_marginTop="12dp"
            android:hint="@string/cancel"
            android:onClick="onCancelClick"
            android:textColorHint="@android:color/background_dark" />

        <TextView
            android:id="@+id/T_DownloadingW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/T_CircularBar"
            android:layout_centerInParent="true"
            android:text="Downloading..."
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/black" />

        <ProgressBar
            android:id="@+id/T_CircularBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/T_SchStartW"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

        <ProgressBar
            android:id="@+id/T_LinearBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/T_DownloadingW"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="top"
            android:indeterminate="false"
            android:max="100"
            android:progress="0" />

    </RelativeLayout>

</ScrollView>
